Feature: add stdin on run code
